<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Amiberry</string>

    <string name="nav_home">Home</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_files">Files</string>
    <string name="nav_configs">Configs</string>
    <string name="nav_about">About</string>

    <string name="tab_cpu">CPU</string>
    <string name="tab_chipset">Chipset</string>
    <string name="tab_memory">Memory</string>
    <string name="tab_display">Display</string>
    <string name="tab_sound">Sound</string>
    <string name="tab_input">Input</string>
    <string name="tab_storage">Storage</string>

    <string name="settings_title">Settings</string>
    <string name="quick_start_title">Quick Start</string>
    <string name="file_manager_title">File Manager</string>
    <string name="configurations_title">Saved Configurations</string>
    <string name="configurations_refresh">Refresh configurations</string>

    <string name="more_options">More options</string>
    <string name="action_start">Start</string>
...
