...
						value = port0Label,
						onValueChange = {},
						readOnly = true,
						label = { Text(stringResource(R.string.settings_input_port0_label)) },
						trailingIcon = { ExposedDropdownMenuDefaults.TrailingIcon(expanded = port0Expanded) },
						modifier = Modifier
							.testTag("input-port0-dropdown")
							.menuAnchor(ExposedDropdownMenuAnchorType.PrimaryNotEditable)
							.fillMaxWidth()
					)
					ExposedDropdownMenu(
						expanded = port0Expanded,
						onDismissRequest = { port0Expanded = false }
...
						value = port1Label,
						onValueChange = {},
						readOnly = true,
						label = { Text(stringResource(R.string.settings_input_port1_label)) },
						trailingIcon = { ExposedDropdownMenuDefaults.TrailingIcon(expanded = port1Expanded) },
						modifier = Modifier
							.testTag("input-port1-dropdown")
							.menuAnchor(ExposedDropdownMenuAnchorType.PrimaryNotEditable)
							.fillMaxWidth()
					)
					ExposedDropdownMenu(
						expanded = port1Expanded,
						onDismissRequest = { port1Expanded = false }
...
